--- a/index.html
+++ b/index.html
@@ -7,8 +7,79 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ремонт телефонов</title>
     <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
-    <h1>Ремонт телефонов</h1>
+    <div class="container">
+
+      <header class="header">
+        <div class="logo">
+          <a href="/" class="logo-link">ЛОГОТИП</a>
+        </div>
+        <div class="nav">
+          <ul>
+            <li class="nav-item"><a href="#">О нас</a></li>
+            <li class="nav-item"><a href="#">Как проехать</a></li>
+          </ul>
+        </div>
+        <div class="phone">
+          <a href="tel:77777" class="phone-number">Тел.: 77-77-7</a>
+        </div>
+      </header>
+
+      <div class="title">
+        <div>
+          <h1 class="h1-text">Ремонт Телефонов</h1>
+        </div>
+      </div>
+      <div class="gallery">
+        <div class="photo"></div>
+        <div class="photo"></div>
+        <div class="photo"></div>
+        <div class="photo"></div>
+      </div>
+
+      <div class="text-center mt-3">
+        <h2 class="h2-text">
+          Наши преимущества
+        </h2>
+      </div>
+      <div class="advantages mt-3">
+        <div class="card me-3 text-center">
+          <h3>Быстро</h3>
+        </div>
+        <div class="card me-3 text-center">
+          <h3>Качественно</h3>
+        </div>
+        <div class="card text-center">
+          <h3>Гарантия</h3>
+        </div>
+      </div>
+
+      <div class="form mt-3 text-center">
+        <input type="text" placeholder="Имя" class="form-input">
+        <input type="text" placeholder="Телефон" class="form-input">
+        <button class="btn">
+          Оставить заявку
+        </button>
+      </div>
+
+      <div class="map mt-3 d-flex">
+        <div class="card me-3 text-center">
+          <h3>Это карта</h3>
+        </div>
+
+        <div class="contacts">
+          <h3 class="mt-3">Адрес</h3>
+          <h3 class="mt-3">Контакты</h3>
+          <h3 class="mt-3">Режим работы</h3>
+        </div>
+      </div>
+
+      <footer class="footer text-center mt-3">
+        <p class="text">Чиним телефоны с 1876 года</p>
+      </footer>
+
+    </div>
   </body>
 </html>
